<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">丁俊的demo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="parent_text_system">系统调试相关</string>
    <string name="parent_text_ui">UI相关</string>
    <string name="parent_text_demo">一些Demo</string>
    <string name="ota_push_test_label">测试OTA灰度</string>
	<string name="system_dialog_label">系统对话框</string>
	<string name="test_camera_label">测试摄像头开关</string>
	<string name="usb_label">USB链接界面</string>
	<string name="system_notification_label">通知测试</string>
	<string name="camera_open_stop_preview">相机preview开关测试</string>
	<string name="system_status_bar">状态栏测试</string>
	<string name="battery_test">电池测试</string>
	<string name="flash_control">闪光灯</string>
    <string name="change_fonts">测试锁屏主题渲染效率</string>
    <string name="change_theme">主題</string>
	
	<string name="ui_title_scrool_label">标题滚动</string>
	<string name="ui_list_animation_list">List Grad动画</string>
	<string name="ui_list_reflash">带刷新的List</string>
    <string name="ui_list_button_demo">Button</string>

	<string name="connect_interface">一些数据接口</string>
	<string name="gesture_detector">多手指手势识别</string>
    <string name="system_dialog">系统对话框</string>
    <string name="ota_send_broadcast">OTA 发送推送广播</string>
    <string name="shut_down_dialog">平板关机对话框</string>
    <string name="shut_down_dialog_M1000">M1000关机对话框</string>
    <string name="alertdialog">AlertDialog</string>
    <string name="normaldialog">NormalDialog</string>
    <string name="progressdialog">ProgressDialog</string>
    <string name="usb_storage_title" msgid="5901459041398751495">"已连接USB"</string>
	<string name="usb_storage_message">"您已通过USB连接至计算机。如果您要在计算机与Android设备的USB存储设备之间复制文件，请按下面的按钮。"</string>
	<string name="usb_storage_button_mount" msgid="1052259930369508235">"打开USB存储设备"</string>
 	<string name="usb_storage_stop_button_mount" msgid="7060218034900696029">"关闭USB存储设备"</string>
	
 	<string name="standard">Standard</string>
    <string name="listview_example">ListView Example</string>
    <string name="gridview_example">GridView Example</string>
    <string name="recyclerview_list_example">RecyclerView List Example</string>
    <string name="recyclerview_grid_example">RecyclerView Grid Example</string>
    <string name="recyclerview_staggered_grid_example">RecyclerView Staggered Grid Example</string>
    <string-array name="jazzy_effects">
        <item>@string/standard</item>
        <item>Grow</item>
        <item>Cards</item>
        <item>Curl</item>
        <item>Wave</item>
        <item>Flip</item>
        <item>Fly</item>
        <item>ReverseFly</item>
        <item>Helix</item>
        <item>Fan</item>
        <item>Tilt</item>
        <item>Zipper</item>
        <item>Fade</item>
        <item>Twirl</item>
        <item>SlideIn</item>
    </string-array>
    
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>
	
    <string name="send_notification">发送一个普通标准通知</string>
    <string name="cancle_notification">取消一个通知</string>
    <string name="update_notification">更新一个通知</string>
    <string name="send_notification_ontime">定时发送一个通知</string>
    <string name="send_notification_unclear">发送一个不可清除的普通通知</string>
    <string name="send_notification_free_normal">发送一个自定义通知</string>
    <string name="send_notification_free_unclear">发送一个自定义不可删除通知</string>
</resources>
